# bachelor

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  bachelor.sublime-project
include/lhecker_bachelor/: binarize.h  distance.h  image.h  path.h  skeleton.h  tracer.h  util.h
src/: CMakeLists.txt  _discarded_ideas.cpp  _palette.cpp  _palette.h  binarize.cpp  defer.h  distance.cpp  image.cpp  path_approx.cpp  path_search.cpp  path_svg.cpp  skeleton.cpp  string_ext.h  tracer.cpp  util.cpp
tests/: CMakeLists.txt  path.cpp  path.h  path_approx.cpp  path_search.cpp
thesis/: .latexmkrc  appendix.tex  frontmatter.tex  main.bib  main.tex  mainmatter_essentials.tex  mainmatter_essentials_distance_transform_brute_force.cpp  mainmatter_implementation.tex  mainmatter_implementation_sauvola_baseline.cpp  mainmatter_implementation_sauvola_optimized.cpp  mainmatter_introduction.tex  mainmatter_results.tex  mainmatter_summary.tex  mainmatter_theory.tex  plagiarism.tex
thesis/images/: README.md  make_images.py
thesis/scripts/: zhang_suen_patterns.py
